tests/purs/failing/CoercibleRepresentational4.out
Error found:
in module [33mMain[0m
at tests/purs/failing/CoercibleRepresentational4.purs:11:38 - 11:44 (line 11, column 38 - line 11, column 44)

  No type class instance was found for
  [33m                              [0m
  [33m  Prim.Coerce.Coercible Int   [0m
  [33m                        String[0m
  [33m                              [0m

while solving type class constraint
[33m                                                 [0m
[33m  Prim.Coerce.Coercible (Representational Int)   [0m
[33m                        (Representational String)[0m
[33m                                                 [0m
while checking that type [33mforall (a :: Type) (b :: Type). Coercible @Type a b => a -> b[0m
  is at least as general as type [33mRepresentational Int -> Representational String[0m
while checking that expression [33mcoerce[0m
  has type [33mRepresentational Int -> Representational String[0m
in value declaration [33mrepresentationalToRepresentational[0m

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

